@@ -3,7 +3,7 @@ Recent Changes for wxPython
 
 2.6.3.0
 -------
-* Mar-2006
+* 27-March-2006
 
 Change the wx.ListCtrl InsertStringItem wrapper to use the form that
 takes an imageIndex, and set the default to -1.  This ensures that on
@@ -24,7 +24,7 @@ wxPython exposes, and to be able to generate code that matches that
 which wxPython is using.  If you are building wxPython yourself and
 need to modify any of the \*.i files or to add your own, then you will
 want to be sure to use a matching SWIG.  See wxPython/SWIG/README.txt
-in the source tarbal for details.
+in the source tarball for details.
 
 wx.Image.Copy now also copies the alpha channel.
 
@@ -80,6 +80,8 @@ Who, which makes it easy to put checkboxes on list control items.
 Applied a patch from Christian Kristukat to wx.lib.plot that adds
 scrollbars when the plot is zoomed in, and also the ability to grab a
 zoomed plot and move it around with a mouse drag.
+
+XRCed updated to allow wxMenuBar to be created inside a wxFrame.
 
 
 
